# frontier-scout

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  bitbucket-pipelines.yml  docker-compose.yml  preferences.json  pyproject.toml  pytest.ini  requirements.txt  skills-log.md  tech-radar.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  cost-report.yml  deploy-lambda.yml  evaluate-from-slack.yml  lab-from-slack.yml  mark-seen-from-slack.yml  pulse.yml  release.yml  scout.yml  snooze-from-slack.yml  synthesizer.yml
demo/: briefing.html  briefing.md  cost-breakdown.md  judge-trace.md  quality-log.jsonl  rlaif-report.md  verdicts.json
docs/: architecture.md  blockers.md  deployment.md  evals.md  governance.md  personalized-adoption-intelligence.md  product-thesis.md  reference-stack.md  release-metadata.md  research-synthesis.md  security-model.md  slack-github-actions.md  slack-message-design.md  slack-reaction-trigger.md
docs/adrs/: 0001-python-typed-monolith.md  0002-sqlite-baseline-store.md  0003-vector-store.md  0004-graph-store.md  0005-authz.md  0006-gateway.md  0007-observability-audit.md  0008-prompts-evals.md  0009-mcp-policy.md
docs/archive/: blockers.md
frontier_scout/: __init__.py  cli.py  dep_trial.py  dependencies.py  doctor.py  dossier.py  evaluate.py  guard.py  implement.py  imports.py  lab.py  mcp_audit.py  notifications.py  packs.py  policy.py  profile.py  progress.py  report.py  scheduling.py  scout.py  store.py  trials.py
lambda/: app_home_dispatch.py  bootstrap.py  button_dispatch.py  deploy.sh  github_mirror.py  handler.py  radar_query.py  reaction_dispatch.py  requirements.txt  signal_log.py  slack_verify.py
outputs/: __init__.py  _text.py
scripts/: __init__.py  cost_report.py  cost_tracker.py  demo.py  evaluate_from_slack.py  home_view.py  judge.py  lab_from_slack.py  lab_runner.py  llm_client.py  memory.py  preferences.py  preflight.py  prompts.py  pulse.py  quality_logger.py  render_html_readme_banner.py  render_readme_banner.py  rlaif.py  scout.py  slack_post.py  synthesizer.py  tools.py  validators.py
tests/: test_ai_radar_scope.py  test_clear_memory.py  test_cli_onboarded.py  test_cli_progress.py  test_dep_trial_executes.py  test_dependency_osv_failure.py  test_doctor.py  test_evaluate_from_slack_rendering.py  test_guard.py  test_home_view.py  test_implement.py  test_imports.py  test_imports_multilang.py  test_incident_change_scout.py  test_injection_live.py  test_lab.py  test_lab_isolation.py  test_lambda_handler.py  test_mcp_audit.py  test_notifications.py  test_packs_dependencies.py  test_pipeline_bits.py  test_platform_authz.py  test_platform_context_gateway.py  test_platform_orchestration_tools.py  test_platform_retrieval.py  test_policy.py  test_policy_capability_hardening.py  test_policy_lab_passed.py  test_policy_loading.py  test_profile_dossier.py  test_profile_monorepo.py  test_progress_reporter.py  test_providers.py  test_report.py  test_report_scoping.py  test_rlaif.py  test_scheduling.py  test_scout_actions.py  test_scout_view_redesign.py  (+13 more)
(+99 files in other folders)
