[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-scout"
version = "1.2.0"
description = "A local AI adoption radar for tools, MCP servers, agent frameworks, and model drops."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Ajay Surya"}
]
keywords = [
  "ai",
  "agents",
  "mcp",
  "developer-tools",
  "tech-radar",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "anthropic>=0.45.0",
  "feedparser>=6.0.11",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "pydantic>=2.0",
  "huggingface_hub>=0.24.0",
  "transformers>=4.40.0",
  "packaging>=24.0",
  "tomli-w>=1.0.0",
  "textual>=8.2,<9",
  "tree-sitter-language-pack>=1.8,<2",
  "croniter>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.10",
  "build>=1.2.0",
  "coverage>=7.6.0",
  "detect-secrets>=1.5.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "pillow>=10.0.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/ajaysurya1221/frontier-scout"
Repository = "https://github.com/ajaysurya1221/frontier-scout"
Issues = "https://github.com/ajaysurya1221/frontier-scout/issues"

[project.scripts]
frontier-scout = "frontier_scout.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["frontier_scout*", "scripts*", "outputs*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["frontier_scout/platform"]

[tool.pytest.ini_options]
markers = [
  "live: tests that require network or external services",
]
